--- a/practice/src/section/_section2.ejs
+++ b/practice/src/section/_section2.ejs
@@ -1,15 +1,28 @@
 <section class="section section2">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      two
+      details+summary
     </h2>
   </div>
 
 
   <div class="sec2Trial">
-    <div class="sec2El"></div>
-    <div class="sec2El"></div>
-    <div class="sec2El"></div>
+    <details>
+      <summary>クリック</summary>
+      <div class="summary-wrap">
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+      </div>
+    </details>
+  </div>
+
+
+  <div class="secNote">
+    <h3>注意事項</h3>
+    <p>ie&edgeで対応なし</p>
+    <p>アニメーション不可</p>
+    <p>パッと表示のときのみ可能</p>
   </div>
 
 </section>
