--- a/practice/src/section/_section3.ejs
+++ b/practice/src/section/_section3.ejs
@@ -1,15 +1,21 @@
 <section class="section section3">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      three
+      pulse
     </h2>
   </div>
 
 
   <div class="sec3Trial">
-    <div class="sec3El"></div>
-    <div class="sec3El"></div>
-    <div class="sec3El"></div>
+    <div class="pulse pulse--1">
+      <a href="javascript:void(0)">pulse single</a>
+    </div>
+    <div class="pulse pulse--2">
+      <a href="javascript:void(0)">pulse double</a>
+    </div>
+    <div class="pulse pulse--3">
+      <a href="javascript:void(0)">pulse infinite</a>
+    </div>
   </div>
 
 </section>
