--- a/practice/src/section/_section1.ejs
+++ b/practice/src/section/_section1.ejs
@@ -1,15 +1,23 @@
 <section class="section section1">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      one
+      scroll-snap
     </h2>
   </div>
 
 
-  <div class="sec1Trial">
-    <div class="sec1El sec1El--1"></div>
-    <div class="sec1El sec1El--2"></div>
-    <div class="sec1El sec1El--3"></div>
+  <div class="snap-container">
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="yellow"></div>
   </div>
+
+
+
+  <div class="secNote">
+    <h3>注意事項</h3>
+    <p>特に無し</p>
+  </div>
+
 
 </section>
