--- a/practice/src/assets/scss/section/_section2.scss
+++ b/practice/src/assets/scss/section/_section2.scss
@@ -44,6 +44,7 @@ summary {
   transition: .5s;
   // ▶を消す Chrome以外の場合
   list-style: none;
+  overflow: hidden;
 }
 
 summary:hover {
@@ -58,4 +59,5 @@ summary::-webkit-details-marker {
 .summary-wrap {
   padding: 20px 40px;
   background-color: white;
+  overflow: hidden;
 }
