--- a/practice/src/assets/scss/section/_section4.scss
+++ b/practice/src/assets/scss/section/_section4.scss
@@ -1,3 +1,41 @@
 @charset "utf-8";
 
-.section4 {}
+.section4 {
+  background-color: rgb(204, 204, 255);
+}
+
+
+.cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn {
+  width: 150px;
+  margin: 0 auto;
+  padding: 20px 0;
+  font-weight: bold;
+  text-align: center;
+  background-color: rgb(221, 221, 221);
+  cursor: pointer;
+}
+
+.question {
+  width: 80%;
+  height: 300px;
+  margin: 100px auto;
+  padding: 30px 50px;
+  background-color: #fff;
+}
+
+
+.tips {
+  width: 150px;
+  margin: 0 auto;
+  padding: 20px 0;
+  font-weight: bold;
+  text-align: center;
+  border: 1px solid rgb(255, 224, 88);
+  background-color: rgb(244, 255, 148);
+}
