--- a/practice/src/common/_footer.ejs
+++ b/practice/src/common/_footer.ejs
@@ -1,6 +1,7 @@
 <footer class="l-footer">
 
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script type="text/javascript" src="<%-conf.path.js%>bundle.js"></script>
 </body>
 
