glow-neon-button

--- a/practice/src/index.ejs
+++ b/practice/src/index.ejs
@@ -28,6 +28,10 @@
   <%- include(page.root + 'section/_section11', {param:'param'}); %>
   <%- include(page.root + 'section/_section12', {param:'param'}); %>
   <%- include(page.root + 'section/_section13', {param:'param'}); %>
+  <%- include(page.root + 'section/_section14', {param:'param'}); %>
+  <%- include(page.root + 'section/_section15', {param:'param'}); %>
+  <%- include(page.root + 'section/_section16', {param:'param'}); %>
+  <%- include(page.root + 'section/_section17', {param:'param'}); %>
 
 
 </main>
