--- a/practice/public/assets/css/index.css
+++ b/practice/public/assets/css/index.css
@@ -3534,37 +3534,6 @@ blockquote:before {
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp
 }
-body {
-  max-width: 1000px;
-  width: 100%;
-  margin: 0 auto
-}
-@media screen and (max-width:750px) {
-  body {
-    max-width: 100%
-  }
-}
-.headerWrap {
-  margin: 40px auto;
-  padding: 20px 0;
-  text-align: center;
-  background-color: #d4d4d4
-}
-@media screen and (max-width:750px) {
-  .headerWrap {
-    margin: 4vw auto;
-    padding: 4vw 0
-  }
-}
-.headerWrap__Ttl {
-  font-size: 30px
-}
-@media screen and (max-width:750px) {
-  .headerWrap__Ttl {
-    font-size: 13px;
-    font-size: 3.46667vw
-  }
-}
 .u-mt00 {
   margin-top: 0
 }
@@ -3699,6 +3668,182 @@ body {
 }
 .secNote p {
   text-align: left
+}
+.section17 {
+  background-color: #050801;
+  padding-bottom: 200px
+}
+.secTtl__text {
+  color: #fff
+}
+.neon {
+  width: 900px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center
+}
+.neonLink {
+  position: relative;
+  display: inline-block;
+  margin: 40px 0;
+  padding: 25px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+  color: #03e9f4;
+  -webkit-box-reflect: below 1px linear-gradient(transparent,rgba(3,233,244,.6))
+}
+.neonLink--1 {
+  -webkit-filter: hue-rotate(290deg);
+  filter: hue-rotate(290deg)
+}
+.neonLink--3 {
+  -webkit-filter: hue-rotate(110deg);
+  filter: hue-rotate(110deg)
+}
+.neonLink:hover {
+  background-color: #03e9f4;
+  color: #050801;
+  -webkit-box-shadow: 0 0 5px #03e9f4,0 0 25px #03e9f4,0 0 50px #03e9f4,0 0 200px #03e9f4;
+  box-shadow: 0 0 5px #03e9f4,0 0 25px #03e9f4,0 0 50px #03e9f4,0 0 200px #03e9f4;
+  -webkit-box-reflect: below 1px linear-gradient(transparent,#03e9f4)
+}
+.neonSpan {
+  position: absolute;
+  display: block
+}
+.neonSpan--1 {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: -webkit-gradient(linear,left top,right top,from(transparent),to(#03e9f4));
+  background: -o-linear-gradient(left,transparent,#03e9f4);
+  background: linear-gradient(90deg,transparent,#03e9f4);
+  -webkit-animation: animate--1 1s linear infinite;
+  animation: animate--1 1s linear infinite
+}
+@-webkit-keyframes animate--1 {
+  0% {
+    left: -100%
+  }
+  100%,
+  50% {
+    left: 100%
+  }
+}
+@keyframes animate--1 {
+  0% {
+    left: -100%
+  }
+  100%,
+  50% {
+    left: 100%
+  }
+}
+.neonSpan--2 {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: -webkit-gradient(linear,left top,left bottom,from(transparent),to(#03e9f4));
+  background: -o-linear-gradient(top,transparent,#03e9f4);
+  background: linear-gradient(180deg,transparent,#03e9f4);
+  -webkit-animation: animate--2 1s linear infinite;
+  animation: animate--2 1s linear infinite;
+  -webkit-animation-delay: .25s;
+  animation-delay: .25s
+}
+@-webkit-keyframes animate--2 {
+  0% {
+    top: -100%
+  }
+  100%,
+  50% {
+    top: 100%
+  }
+}
+@keyframes animate--2 {
+  0% {
+    top: -100%
+  }
+  100%,
+  50% {
+    top: 100%
+  }
+}
+.neonSpan--3 {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: -webkit-gradient(linear,left top,right top,from(#03e9f4),to(transparent));
+  background: -o-linear-gradient(left,#03e9f4,transparent);
+  background: linear-gradient(90deg,#03e9f4,transparent);
+  -webkit-animation: animate--3 1s linear infinite;
+  animation: animate--3 1s linear infinite;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s
+}
+@-webkit-keyframes animate--3 {
+  0% {
+    right: -100%
+  }
+  100%,
+  50% {
+    right: 100%
+  }
+}
+@keyframes animate--3 {
+  0% {
+    right: -100%
+  }
+  100%,
+  50% {
+    right: 100%
+  }
+}
+.neonSpan--4 {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: -webkit-gradient(linear,left top,left bottom,from(#03e9f4),to(transparent));
+  background: -o-linear-gradient(top,#03e9f4,transparent);
+  background: linear-gradient(180deg,#03e9f4,transparent);
+  -webkit-animation: animate--4 1s linear infinite;
+  animation: animate--4 1s linear infinite;
+  -webkit-animation-delay: .75s;
+  animation-delay: .75s
+}
+@-webkit-keyframes animate--4 {
+  0% {
+    bottom: -100%
+  }
+  100%,
+  50% {
+    bottom: 100%
+  }
+}
+@keyframes animate--4 {
+  0% {
+    bottom: -100%
+  }
+  100%,
+  50% {
+    bottom: 100%
+  }
 }
 .section2 {
   background-color: #ffd0d0
