--- a/practice/src/common/_footer.ejs
+++ b/practice/src/common/_footer.ejs
@@ -1,13 +1,12 @@
 <footer class="l-footer">
 
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script type="text/javascript" src="<%-conf.path.js%>bundle.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.min.js"></script>
 <script>
   $("img.lazyload").lazyload();
 
-</script>
+</script> -->
 </body>
 
 </html>
