--- a/practice/src/section/_section11.ejs
+++ b/practice/src/section/_section11.ejs
@@ -1,4 +1,18 @@
-<section class="section11">
+<section class="section section11">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      spin text
+    </h2>
+  </div>
 
+  <div class="spin">
+
+    <ul class="spinText">
+      <li class="spinText__letter">S</li>
+      <li class="spinText__letter">P</li>
+      <li class="spinText__letter">I</li>
+      <li class="spinText__letter">N</li>
+    </ul>
+  </div>
 
 </section>
