--- a/practice/src/section/_section4.ejs
+++ b/practice/src/section/_section4.ejs
@@ -2,7 +2,7 @@
 
   <div class="secTtl">
     <h2 class="secTtl__text">
-      javascript
+      SVG animation
     </h2>
   </div>
 
@@ -45,9 +45,10 @@
       </svg>
 
 
+
     </div>
     <button id="wonderlust-btn">SvgAnimation</button>
-
+    <p id="clickAgain">もう一度クリック！</p>
 
 
   </div>
