--- a/practice/src/assets/scss/section/_section10.scss
+++ b/practice/src/assets/scss/section/_section10.scss
@@ -1,3 +1,73 @@
 @charset "utf-8";
 
-.section10 {}
+.section10 {
+  background-color: rgb(216, 255, 154);
+
+
+  .cont {
+    width: 700px;
+    height: 400px;
+    margin: 0 auto;
+    background-color: #fff;
+    position: relative;
+
+    &Circle {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      transition: .5s;
+      z-index: 2;
+      cursor: pointer;
+
+      &:nth-child(1) {
+        background-image: url("../../assets/img/clip-path_1.jpg");
+        background-size: contain;
+        clip-path: circle(100px at 0 0);
+
+        &:hover {
+          clip-path: circle(1000px at 0 0);
+        }
+      }
+
+      &:nth-child(2) {
+        background-image: url("../../assets/img/clip-path_2.jpg");
+        background-size: contain;
+        clip-path: circle(100px at 100% 0);
+
+        &:hover {
+          clip-path: circle(1000px at 100% 0);
+        }
+      }
+
+      &:nth-child(3) {
+        background-image: url("../../assets/img/clip-path_3.jpg");
+        background-size: contain;
+        clip-path: circle(100px at 0 100%);
+
+        &:hover {
+          clip-path: circle(1000px at 0 100%);
+        }
+      }
+
+      &:nth-child(4) {
+        background-image: url("../../assets/img/clip-path_4.jpg");
+        background-size: contain;
+        clip-path: circle(100px at 100% 100%);
+
+        &:hover {
+          clip-path: circle(1000px at 100% 100%);
+        }
+      }
+
+    }
+  }
+
+}
+
+.zIndex3 {
+  z-index: 3 !important;
+}
+
+.eventNone {
+  pointer-events: none !important;
+}
