--- a/practice/src/assets/scss/section/_section4.scss
+++ b/practice/src/assets/scss/section/_section4.scss
@@ -12,23 +12,53 @@
     margin: 0 auto;
   }
 
+  // trigger btn to animate SVG
   #wonderlust-btn {
     display: block;
     margin: 30px auto 0;
     cursor: pointer;
   }
 
+  // urge to click btn again
+  #clickAgain {
+    opacity: 0;
+    padding-top: 15px;
+    text-align: center;
+    color: #fff;
+    transition: .4s;
+  }
+
+  // equal to svg tag
   #wonderlust {
     display: none;
     margin: 0 auto;
     animation: fill .6s ease forwards 3s;
   }
 
-  .anim-start {
+  // if this class is added to #wonderlust, animation gets started
+  .show {
     display: block !important;
   }
 
+  // text-animation setting
+  @keyframes text-anim {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
 
+  // fill-animation setting
+  @keyframes fill {
+    from {
+      fill: transparent;
+    }
+
+    to {
+      fill: white;
+    }
+  }
+
+  // below, children of #wonderlust------------------------------
   #wonderlust path:nth-child(1) {
     stroke-dasharray: 285px;
     stroke-dashoffset: 285px;
@@ -89,22 +119,5 @@
     animation: text-anim 1s ease-out forwards 2s;
   }
 
-
-
-  @keyframes text-anim {
-    to {
-      stroke-dashoffset: 0;
-    }
-  }
-
-  @keyframes fill {
-    from {
-      fill: transparent;
-    }
-
-    to {
-      fill: white;
-    }
-  }
 
 }
