--- a/practice/src/section/_section10.ejs
+++ b/practice/src/section/_section10.ejs
@@ -1,4 +1,17 @@
-<section class="section10">
+<section class="section section10">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      clip-path(svgのみ全ブラウザ対応)
+    </h2>
+  </div>
+
+
+  <div class="cont">
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+  </div>
 
 
 </section>
