--- a/practice/src/section/_section12.ejs
+++ b/practice/src/section/_section12.ejs
@@ -1,4 +1,72 @@
-<section class="section12">
+<section class="section section12">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      skewed-border
+    </h2>
+  </div>
 
+
+  <div class="container">
+    <div class="wrap">
+      <div class="bg bg--1"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            01
+          </h2>
+          <h3 class="cont__h3">
+            service one
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="wrap">
+      <div class="bg bg--2"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            02
+          </h2>
+          <h3 class="cont__h3">
+            service twe
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="wrap">
+      <div class="bg bg--3"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            03
+          </h2>
+          <h3 class="cont__h3">
+            service three
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 </section>
